// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OE - navbar dark renders correctly 1`] = `
<jest>
  <nav
    class="navbar navbar-expand-lg navbar-dark"
  >
    <div
      class="container"
    >
      <a
        class="navbar-brand"
        href="/example.html"
      >
        <div
          class="h5 ms-4-5 d-none d-lg-inline-block"
        >
          Navbar
        </div>
      </a>
      <button
        aria-controls="navbar"
        aria-expanded="false"
        aria-label="Toggle navigation"
        class="navbar-toggler"
        data-bs-target="#navbar"
        data-bs-toggle="collapse"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="collapse navbar-collapse"
        id="navbar"
      >
        <ul
          class="navbar-nav"
        >
          <li
            class="nav-item"
          />
          <li
            class="nav-item"
          />
          <li
            class="nav-item"
          />
          <li
            class="nav-item dropdown"
          />
        </ul>
        <form>
          <div
            class="ms-2"
          />
        </form>
      </div>
    </div>
  </nav>
</jest>
`;

exports[`OE - navbar light renders correctly 1`] = `
<jest>
  <nav
    class="navbar navbar-expand-lg navbar-light"
  >
    <div
      class="container"
    >
      <a
        class="navbar-brand"
        href="/example.html"
      >
        <div
          class="h5 ms-4-5 d-none d-lg-inline-block"
        >
          Navbar
        </div>
      </a>
      <button
        aria-controls="navbar"
        aria-expanded="false"
        aria-label="Toggle navigation"
        class="navbar-toggler"
        data-bs-target="#navbar"
        data-bs-toggle="collapse"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="collapse navbar-collapse"
        id="navbar"
      >
        <ul
          class="navbar-nav"
        >
          <li
            class="nav-item"
          />
          <li
            class="nav-item"
          />
          <li
            class="nav-item"
          />
          <li
            class="nav-item dropdown"
          />
        </ul>
        <form>
          <div
            class="ms-2"
          />
        </form>
      </div>
    </div>
  </nav>
</jest>
`;

exports[`OE - navbar renders correctly with disable collapse 1`] = `
<jest>
  <nav
    class="navbar navbar-expand-lg navbar-light"
  >
    <div
      class="container"
    >
      <a
        class="navbar-brand"
        href="/example.html"
      >
        <div
          class="h5 ms-4-5 d-none d-lg-inline-block"
        >
          Navbar
        </div>
      </a>
      <ul
        class="navbar-nav"
      >
        <li
          class="nav-item"
        />
        <li
          class="nav-item"
        />
        <li
          class="nav-item"
        />
        <li
          class="nav-item dropdown"
        />
      </ul>
      <form>
        <div
          class="ms-2"
        />
      </form>
    </div>
  </nav>
</jest>
`;

exports[`OE - navbar renders correctly with expand small 1`] = `
<jest>
  <nav
    class="navbar navbar-expand-sm navbar-light"
  >
    <div
      class="container"
    >
      <a
        class="navbar-brand"
        href="/example.html"
      >
        <div
          class="h5 ms-4-5 d-none d-lg-inline-block"
        >
          Navbar
        </div>
      </a>
      <button
        aria-controls="navbar"
        aria-expanded="false"
        aria-label="Toggle navigation"
        class="navbar-toggler"
        data-bs-target="#navbar"
        data-bs-toggle="collapse"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="collapse navbar-collapse"
        id="navbar"
      >
        <ul
          class="navbar-nav"
        >
          <li
            class="nav-item"
          />
          <li
            class="nav-item"
          />
          <li
            class="nav-item"
          />
          <li
            class="nav-item dropdown"
          />
        </ul>
        <form>
          <div
            class="ms-2"
          />
        </form>
      </div>
    </div>
  </nav>
</jest>
`;
